appchooser: Unconfuse url vs filename

The code was a bit confused whether to pass a file name, url or
some display string to the dialog.
The portal path always passed the file name for local files, for
other URIs would fallback to the mime type instead of the URI.
The private plasma path would pass a URL as string which the dialog
would wrap into another url, which somehow breaks the decoding when
retrieving the filename. When multiple files are passed it used a
free form string, the code in the dialog obviously doesnt make sense
then.
Disentangle this by making it clear you are passing a display string,
convert the url string to an url directly. The portal always passes
content-type, move resolving of the mimetype to the private entry
point where we can deal with the url.
BUG:521748
FIXED-IN:6.6.6