src/appchooserdialog.h
@@ -227,7 +227,7 @@ class AppChooserDialog : public QuickDialog
 {
     Q_OBJECT
 public:
-    explicit AppChooserDialog(const QStringList &choices, const QString &lastUsedApp, const QString &fileName, const QString &mimeName, bool autoRemember);
+    explicit AppChooserDialog(const QStringList &choices, const QString &lastUsedApp, const QString &fileDisplay, const QString &mimeName, bool autoRemember);
     void updateChoices(const QStringList &choices);
 
     QString selectedApplication() const;
